--- a/doc-Managing_Providers/topics/Ansible_Credentials.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Credentials.adoc
@@ -7,9 +7,9 @@ Credentials are utilized by {product-title} for authentication when running Ansi
 {product-title} can store credentials used by playbooks. Credentials saved in {product-title_short} are matched and executed with a playbook when run.   
 
 [IMPORTANT]
-=====
+====
 If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
-=====
+====
 
 . Navigate to menu:Automation[Ansible > Credentials].
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Credential] (*Add a New Credential*).
@@ -22,7 +22,7 @@ Each credential type used by {product-title_short} is detailed in the following 
 
 === Machine
 
-Machine credentials enable {product-title_short} to invoke Ansible on hosts under your management. Just like using Ansible on the command line, you can specify the SSH username, optionally provide a password, an SSH key, or a key password. They define ssh and user-level privilege escalation access for playbooks, and are used when running playbooks on a remote host.
+Machine credentials enable {product-title_short} to invoke Ansible on hosts under your management. Just like using Ansible on the command line, you can specify the SSH username, optionally provide a password, an SSH key, or a key password. They define SSH and user-level privilege escalation access for playbooks, and are used when running playbooks on a remote host.
 
 * *Username*: The username to be used for SSH authentication.
 * *Password*: The actual password to be used for SSH authentication. 
@@ -50,8 +50,8 @@ Network credentials have several attributes that may be configured:
 * *SSH Key*: Copy or drag-and-drop the actual SSH Private Key to be used to authenticate the user to the network via SSH.
 * *Private key passphrase*: The actual passphrase for the private key to be used to authenticate the user to the network via SSH.
 
-=== Scm
-Scm (source control) credentials are used with Projects to clone and update local source code repositories from a remote revision control system such as Git, Subversion, or Mercurial.
+=== SCM
+SCM (source control) credentials are used with Projects to clone and update local source code repositories from a remote revision control system such as Git, Subversion, or Mercurial.
 
 Source Control credentials have several attributes that may be configured:
 
@@ -112,10 +112,10 @@ OpenStack credentials have several attributes that may be configured:
 === Rackspace
 Selecting this credential type enables synchronization of cloud inventory with Rackspace.
 
-Racksapce credentials have the following attributes that may be configured:
+Rackspace credentials have the following attributes that may be configured:
 
 * *Username*: The username to use to connect to vCenter.
-* *API Key*: The public key related to the administrator id. 
+* *API Key*: The public key related to the administrator ID. 
 
 === Satellite 6
 Selecting this credential type enables synchronization of cloud inventory with Red Hat Satellite 6.
@@ -131,9 +131,9 @@ Satellite credentials have several attributes that may be configured:
 Selecting this credential type enables synchronization of inventory with VMware vCenter.
 
 [IMPORTANT]
-=====
+====
 If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
-=====
+====
 
 VMware credentials have several attributes that may be configured:
 
