--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -23,7 +23,7 @@ You can manage policies for containers entities by adding tags. All containers e
 This chapter provides details on managing containers providers. For details on working with the resources within a container environment, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_infrastructure_and_inventory/#container_entities[Container Entities] in _Managing Infrastructure and Inventory_.
 ====
 
-The {product-title_short} user interface uses virtual thumbnails to represent container providers.
+The {product-title_short} user interface uses virtual thumbnails to represent containers providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider:
 
 image:cp-quad-icon.png[]
@@ -33,7 +33,7 @@ image:cp-quad-icon.png[]
 . Power state
 . Authentication status
 
-.Container provider authentication status
+.Containers provider authentication status
 
 [cols="1,1", frame="all", options="header"]
 |===
