update with sme recommendations

--- a/doc-Managing_Providers/topics/Amazon_EC2_Manual_Role_Creation.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Manual_Role_Creation.adoc
@@ -1,4 +1,4 @@
-In certain installations, providing admin group privileges to a {product-title} SmartState Analysis instance may be prohibited.  In this situation, create an IAM role following the procedure described in link:https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_create_for-service.html[Creating a Role for an AWS Service (Console)] in the Amazon Web Services documentation. 
+To eliminate the need to assign _Admin_ group privileges to the Amazon EC2 provider, create an IAM role following the procedure described in link:https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_create_for-service.html[Creating a Role for an AWS Service (Console)] in the Amazon Web Services documentation. 
 
 Use the following parameters:
 
@@ -8,3 +8,5 @@ Use the following parameters:
 .. `AmazonS3FullAccess`
 .. `AmazonSQSFullAccess`
 . Input "smartstate" for the *Role name*. 
+
+Once the IAM role is created, assign the provider _Power User_ privileges as described in xref:amazon-provider-permissions[]. 
