--- a/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
@@ -8,7 +8,7 @@ permissions.
  
 [NOTE]
 ====
-When utilizing a {product-title_short} SmartState Analysis instance in EC2, Red Hat recommends adding {product-title_short} to the _Admin_ group.  For installations in which assigning the _Admin_ group is unacceptable, manually create an Amazon EC2 policy role using specific permissions. See xref:amazon-ec2-manual-role-creation[] for more information.
+When adding an Amazon EC2 provider in {product-title_short} with the intention to use the SmartState Analysis feature, Red Hat recommends using the _Admin_ group.  For situations in which assigning the _Admin_ group is unacceptable, manually create an Amazon EC2 policy role using specific permissions. See xref:amazon-ec2-manual-role-creation[] for more information.
 ====
 
 Further limiting API access limitations can limit Automate capabilities, as Automate
@@ -25,7 +25,7 @@ The AWS services primarily accessed by the {product-title_short} API include:
 * Simple Queue Service (SQS)
 
 [[amazon-ec2-manual-role-creation]]
-== Manually Creating an Amazon EC2 Role For SmartState Analysis Instances
+== Manually Creating an Amazon EC2 Role
 
 include::Amazon_EC2_Manual_Role_Creation.adoc[]
 
