update with reviewer feedback

--- a/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
@@ -8,7 +8,7 @@ permissions.
  
 [NOTE]
 ====
-When adding an Amazon EC2 provider in {product-title_short} with the intention to use the SmartState Analysis feature, Red Hat recommends using the _Admin_ group.  For situations in which assigning the _Admin_ group is unacceptable, manually create an Amazon EC2 policy role using specific permissions. See xref:amazon-ec2-manual-role-creation[] for more information.
+When adding an Amazon EC2 provider in {product-title_short} with the intention to use the SmartState analysis feature, assign _Admin_ group privileges.  For situations in which assigning the _Admin_ group is unacceptable, manually create an Amazon EC2 policy role using specific permissions. See xref:amazon-ec2-manual-role-creation[] for more information.
 ====
 
 Further limiting API access limitations can limit Automate capabilities, as Automate
