--- a/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
@@ -2,7 +2,18 @@
 
 = Permissions for Amazon EC2 Providers
 
+ifdef::cfme[]
 Red Hat recommends using Amazon EC2's _Power User_ Identity and Access Management (IAM) policy when adding Amazon EC2 as a cloud provider in {product-title_short}.
+This policy allows those in the _Power User_ group full access to AWS services except for user administration, meaning a {product-title_short} API user can access all of the API functionality, but cannot access or change user
+permissions.
+ 
+[NOTE]
+====
+When adding an Amazon EC2 provider in {product-title_short} with the intention to use the SmartState analysis feature, Red Hat recommends assigning _Admin_ group privileges.  For situations in which assigning the _Admin_ group is unacceptable, manually create an Amazon EC2 policy role using specific permissions. See xref:amazon-ec2-manual-role-creation[] for more information.
+====
+endif:cfme[]
+
+Use Amazon EC2's _Power User_ Identity and Access Management (IAM) policy when adding Amazon EC2 as a cloud provider in {product-title_short}.
 This policy allows those in the _Power User_ group full access to AWS services except for user administration, meaning a {product-title_short} API user can access all of the API functionality, but cannot access or change user
 permissions.
  
