--- a/doc-Managing_Providers/topics/Enabling_Amazon_Events.adoc
+++ b/doc-Managing_Providers/topics/Enabling_Amazon_Events.adoc
@@ -56,7 +56,7 @@ To create a CloudWatch rule for EC2:
 * *Input*: `Matched event`
 . Click *Configure Details* to save these details.
 . Configure a name and description for the rule if desired. Ensure the *Enabled* checkbox is selected for *State*.
-. Click *Create Rule* to save the CloudWatch rule.
+. Click *Create rule* to save the CloudWatch rule.
 
 Repeat the same procedure to create a CloudWatch rule for volumes, pasting the code snippet below to the *Event Pattern Preview* box:
 
@@ -81,7 +81,7 @@ Repeat the same procedure to create a CloudWatch rule for volumes, pasting the c
 * *Input*: `Matched event`
 . Click *Configure Details* to save these details.
 . Configure a name and description for the rule if desired. Ensure the *Enabled* checkbox is selected for *State*.
-. Click *Create Rule* to save the CloudWatch rule.
+. Click *Create rule* to save the CloudWatch rule.
 
 
 Repeat the same procedure to create a CloudWatch rule for snapshots, pasting the code snippet below to the *Event Pattern Preview* box:
@@ -107,7 +107,7 @@ Repeat the same procedure to create a CloudWatch rule for snapshots, pasting the
 * *Input*: `Matched event`
 . Click *Configure Details* to save these details.
 . Configure a name and description for the rule if desired. Ensure the *Enabled* checkbox is selected for *State*.
-. Click *Create Rule* to save the CloudWatch rule.
+. Click *Create rule* to save the CloudWatch rule.
 
 EC2 can now automatically refresh events in {product-title_short}.
 
