--- a/doc-Installing_on_SCVMM/cfme/master.adoc
+++ b/doc-Installing_on_SCVMM/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Microsoft SCVMM
 :imagesdir: images
-:vernum: 4.7-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :experimental:
