--- a/common/configuration-register-appliance.adoc
+++ b/common/configuration-register-appliance.adoc
@@ -17,14 +17,14 @@ To configure registration for a region:
 .. To register with Red Hat Subscription Management:
 ... In *Register to*, select *Red Hat Subscription Management*.
 ... Enter the *Red Hat Subscription Management Address*. The default is `subscription.rhn.redhat.com`.
-... Enter the *Repository Name(s)*. The default is `cf-me-5.10-for-rhel-7-rpms rhel-7-server-ansible-2.6-rpms rhel-7-server-extras-rpms rhel-7-server-optional-rpms rhel-7-server-rpms`, which are the {product-title} repository and the Red Hat Software Collections repository.
+... Enter the *Repository Name(s)*. The default is {product-repo_list}, which are the {product-title} repository and the Red Hat Software Collections repository.
 ... To use a HTTP proxy, select *Use HTTP Proxy* and enter your proxy details.
 ... Enter your Red Hat account information and click *Validate*.
 ... After your credentials are validated, click *Save*.
 .. To register with Red Hat Satellite 6:
 ... In *Register to*, select *Red Hat Satellite 6*.
 ... Enter the *Red Hat Satellite 6 Address*. The default is `subscription.rhn.redhat.com`.
-... Enter the *Repository Name(s)*. The default is `cf-me-5.10-for-rhel-7-rpms rhel-7-server-ansible-2.6-rpms rhel-7-server-extras-rpms rhel-7-server-optional-rpms rhel-7-server-rpms`, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository.
+... Enter the *Repository Name(s)*. The default is {product-repo_list}, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository.
 ... To use a HTTP proxy, select *Use HTTP Proxy* and enter your proxy details.
 ... Enter your Red Hat Satellite account information and click *Validate*.
 ... After your credentials are validated, click *Save*.
