--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -188,7 +188,7 @@ To view a list of Ansible Tower providers and inventory:
 . select the *Providers* accordion menu to display a list of *All Ansible Tower Providers*. 
 . Select your Ansible Tower provider to expand and list the inventory groups on that Ansible Tower system. The inventory groups can be expanded to view the systems contained within each group, as well as configuration details for these systems.
 
-Similarly, all discovered job and workflow templates are accessed under the provider by expanding the menu:Automation[Ansible Tower > Explorer > Job Templates] accordion menu.
+Similarly, all discovered job and workflow templates are accessed under the provider by expanding the menu:Automation[Ansible Tower > Explorer > Templates] accordion menu.
 
 
 [[viewing-ansible-tower-configured-systems]]
@@ -218,9 +218,9 @@ First, create a catalog:
 
 Then, create an Ansible Tower service catalog item:
 
-. Navigate to menu:Automation[Ansible Tower > Jobs].
-. Click *Ansible Tower Job Templates* and select an Ansible Tower job or workflow template.
-. Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Create Service Dialog from this Job Template] (*Create Service Dialog from this Job Template*).
+. Navigate to menu:Automation[Ansible Tower > Explorer], then click on the *Templates* according menu.
+. Click *Ansible Tower Templates* and select an Ansible Tower job or workflow template.
+. Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Create Service Dialog from Template] (*Create Service Dialog from this Template*).
 . Enter a *Service Dialog Name* (for example, _ansible_tower_job_)and click *Save*.
 . Navigate to menu:Services[Catalogs]. Click *Catalog Items*.
 .  Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Catalog Item] (*Add a New Catalog Item*) to create a new catalog item with the following details, at minimum:
@@ -228,10 +228,10 @@ Then, create an Ansible Tower service catalog item:
 - Enter a *Name* for the service catalog item.
 - Select *Display in Catalog*.
 - In *Catalog*, select the catalog you created previously.
-- In *Dialog*, select the service dialog you created previously (in this example, _ansible_tower_job_). *No Dialog* can be selected if the playbook does not require extra variables from the user. To ask the user to enter extra information when running the task, *Service Dialog* must be selected. 
-- In *Provider*, select your Ansible Tower provider. This brings up the *Ansible Tower Job Template* option and configures the *Provisioning Entry Point State Machine* automatically.
+- In *Dialog*, select the service dialog you created previously (in this example, _ansible_tower_job_). To ask the user to enter extra information when running the task, *Service Dialog* must be selected. A dialog is required if *Display in Catalog* is chosen.
+- In *Provider*, select your Ansible Tower provider. This brings up the *Ansible Tower Template* option and configures the *Provisioning Entry Point State Machine* automatically.
 - Add configuration information for *Reconfigure Entry Point* and *Retirement Entry Point* as applicable. 
-- Select your desired *Ansible Tower Job Template* from the list. Generally, this is the Ansible Tower job or workflow template previously used to create the service dialog.
+- Select your desired *Ansible Tower Template* from the list. Generally, this is the Ansible Tower job or workflow template previously used to create the service dialog.
 . Click *Add*. The catalog item you created will appear in the *All Service Catalog Items* list.
 
 
