--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -28,8 +28,6 @@ If a migration plan fails and you are not sure of the cause, check the following
 .Migrated Virtual Machine Logs
 image:Migrated_VM_details.png[]
 
-. Create and run a new migration plan, using a xref:CSV_file[CSV file] to import the virtual machines.
-
 [[Common_issues_and_mistakes]]
 == Common Issues and Mistakes
 
@@ -47,7 +45,7 @@ Migration plan does not discover virtual machines::
 If you are migrating previously migrated virtual machines, the migration plan cannot discover them because they are marked in the CloudForms VMDB as `migrated`. You must xref:Remigrating_Virtual_Machines[remigrate the virtual machines].
 
 Incorrect attributes in the virtual machine CSV import file::
-After you correct the xref:CSV_file[CSV file], create a new migration plan, import the updated CSV file, and run the migration plan.
+Correct the xref:CSV_file[CSV file], create a new migration plan, import the updated CSV file, and run the migration plan.
 
 Migration fails immediately::
 If a migration fails immediately, before the progress bar is displayed, this is often caused by a configuration error in the environment. Check the *automation.log* file on the CloudForms appliance to determine the cause. When the cause has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
