add custom button migration workflow

--- a/doc-Scripting_Actions/cfme/master.adoc
+++ b/doc-Scripting_Actions/cfme/master.adoc
@@ -25,4 +25,9 @@ include::topics/appe_faq_flows.adoc[]
 
 include::topics/appe_provision_request.adoc[]
 
+include::topics/appe_migrate_custom_buttons.adoc[]
+
+
+
+
 
