--- a/doc-Scripting_Actions/miq/index.adoc
+++ b/doc-Scripting_Actions/miq/index.adoc
@@ -24,3 +24,8 @@ include::doc-Scripting_Actions/miq/topics/appe_objects.adoc[]
 include::doc-Scripting_Actions/miq/topics/appe_faq_flows.adoc[]
 
 include::doc-Scripting_Actions/miq/topics/appe_provision_request.adoc[]
+
+include::doc-Scripting_Actions/miq/topics/appe_migrate_custom_buttons.adoc[]
+
+
+
