--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -6,8 +6,11 @@ Migrating your infrastructure comprises 2 tasks:
 * xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (cluster, datastore, and networks) of your source environment to your target environment and selecting virtual machines to migrate
 
 * Creating a xref:Creating_and_running_a_migration_plan[migration plan] with optional xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] that run before or after each virtual machine is migrated
++
+You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress. This option allows you to retry the migration plan immediately or to schedule it in the future.
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+include::modules/proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
 include::modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc[leveloffset=+1]
 include::modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc[leveloffset=+2]
