--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -65,7 +65,7 @@ image:Advanced_Options.png[]
 
 . Select *Save migration plan to run later* or *Start Migration Immediately* and click *Create*.
 +
-* If you selected *Save migration plan to run later*, the migration plan is saved under *Migration Plans Not Started*.
+* If you selected *Save migration plan to run later*, the migration plan is saved in *Migration Plans Not Started*.
 +
 To schedule the migration plan, click the *Schedule* button, select a date and time, and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
 +
@@ -73,14 +73,14 @@ To schedule the migration plan, click the *Schedule* button, select a date and t
 ====
 If you wish to run a scheduled plan immediately, click *Migrate*.
 
-To edit or delete a schedule or plan, click the *TBD* icon (... turned sideways).
+To edit or delete a schedule or plan, click the *More Actions* icon.
 ====
 
 * If you selected *Start Migration Immediately*, the migration plan runs immediately.
 +
-The migration plan may take some time to complete. The migration plan window displays *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time.
+The migration plan may take some time to complete. The migration plan displays progress bars showing the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time.
 +
-To view the migration progress of individual virtual machines, click the migration plan name to display the migration plan details.
+To view the migration progress of individual virtual machines, click menu:Migration Plans in Progress[_Migration Plan_] to display the migration plan details.
 +
 [NOTE]
 ====
@@ -97,9 +97,10 @@ If your migration goals change, you can remigrate previously migrated virtual ma
 . Delete the target virtual machines corresponding to the source virtual machines that you are remigrating.
 . Delete the disks that were created in the target datastore during the earlier migration to free up space.
 . Create a xref:CSV_file[CSV file] to import the source virtual machines.
-. Create and run a new migration plan.
 +
 [NOTE]
 ====
-The virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
+The source virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
 ====
+
+. Create and run a new migration plan.
